# hosting

./: .gitignore  README.md  docker-compose.yml
rootfs/etc/fail2ban/jail.d/: vaultwarden.local
rootfs/opt/traefik/: dynamic.yaml  traefik.yaml
scripts/: acme-json-to-file.sh
services/sub-relay/: Dockerfile  main.py  pyproject.toml
