[tool.poetry]
name = "sub-relay"
version = "0.1.0"
description = ""
authors = ["Aris Chow <hello@arisc.how>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.3"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
